k8s/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  labels:
    app: laravel
    tier: fullstack
spec:
  selector:
    matchLabels:
      app: laravel
      tier: fullstack
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: laravel
        tier: fullstack
    spec:
      containers:
      - image: jesusgr4/laravel-repository:laravel-keepcoding-v1.0.6
        name: laravel
        command: ["/bin/bash"]
        args: ["-c", "php /var/www/html/artisan migrate && php-fpm"]
        resources:
          requests:
            memory: 256Mi
            cpu: 300m
          limits:
            memory: 512Mi
            cpu: 400m
        ports:
        - containerPort: 9000
          name: laravel

      - image: jesusgr4/laravel-repository:nginx-keepcoding-v1.0.6
        name: server
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: prod.conf
      volumes:
        - name: nginx-config
          configMap:
            name: configfiles
