k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-mysql
  labels:
    app: laravel
spec:
  selector:
    matchLabels:
      app: laravel
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: laravel
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 300m
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
