k8s/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: laravel-ingress
spec:
  rules:
  - host: jesus-practice.34.77.127.249.nip.io
    http:
      paths:
      - backend:
          serviceName: laravel-svc
          servicePort: 80
